# Parameter-Optimization-for-Iterative-MINFLUX-Microscopy

./: CITATION.cff  README.html  README.md  pyproject.toml  python_env.yml
data/change_dwell_time/filtered/: DT200_combined_set_3-8-13_TOT_cycle_filtered_2xBBEG.npz  DT200_processed_set_3-8-13_2xBBEG.npz
data/change_dwell_time/raw/: DT200_raw_set_2.npz
data/change_photon_limit/filtered/: PL20_combined_set_3-15-27_TOT_cycle_filtered_noBBEG.npz  PL20_processed_set_3-15-27_noBBEG.npz  PL50_combined_set_6-20-34_TOT_cycle_filtered_noBBEG.npz  (+1 more)
data/npz_files_graph_nummerical_values/: Figure_1_Panel_E_CRLB_data.npz  Figure_1_Panel_F_TCP-Area-Coverage_data.npz  Figure_2_Panel_E_GUV-QD-Diffusion-Coefficients_data.npz  Figure_3_Panel_B_Dye-Diffusion-Coefficients_data.npz  Figure_3_Panel_B_Dye-MSD_data.npz
data/npz_files_graphs_numerical_source_data/: Figure_2_Panel_B_Turning-Angle-Distribution_data.npz  Figure_2_Panel_C_Dye-Diffusion-Coefficients_data.npz  Figure_2_Panel_C_TIRF-Diffusion-Coefficients_data.npz  Figure_2_Panel_D_GUV-QD-Ensemble-MSD_data.npz  Figure_3_Panel_C_Upper-Theoretical-Limit_data.npz  Figure_3_Panel_D_Upper-Theoretical-Limit-Zoom_data.npz
data_access_utils/: data_tools.py  dataset.py  how_to_access_plot_numerical_data.ipynb  how_to_access_plot_nummerical_data.ipynb  how_to_access_the_data.ipynb  how_to_get_your_data.ipynb  tools.py
sequence_utils/: sequence_tools.py  verify_sequences.py
sequences/container/: seqTrkFast_Triangle_L100_10-20-50-100.json  seqTrk_L100_10-20-50-100.json  seqTrk_L150_10-20-50-100.json  seqTrk_L75_10-20-50-100.json
(+25 files in other folders)
