[tool.poetry]
name = "parameter-optimization-for-iterative-minflux-microscopy"
version = "0.1.0"
description = ""
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
pandas = "^2.3.2"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
